--- a/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -106,7 +106,7 @@
                         <li class="icons dropdown">
                             <div class="user-img c-pointer position-relative" data-toggle="dropdown">
                                 <span class="activity active"></span>
-                                <img src="images/user/1.png" height="40" width="40" alt="">
+                                <img src="../images/user/form-user.png" height="40" width="40" alt="">
                             </div>
                             <div class="drop-down dropdown-profile animated fadeIn dropdown-menu">
                                 <div class="dropdown-content-body">
@@ -124,7 +124,7 @@
                                         <li>
                                             <a href="page-lock.php"><i class="icon-lock"></i> <span>Lock Screen</span></a>
                                         </li>
-                                        <li><a href="page-logout.php"><i class="icon-key"></i> <span>Logout</span></a></li>
+                                        <li><a asp-controller="Home" asp-action="Logout"><i class="icon-key"></i> <span>Logout</span></a></li>
                                     </ul>
                                 </div>
                             </div>
